--- a/faq/index.html
+++ b/faq/index.html
@@ -39,9 +39,8 @@
         <div class="row marketing">
             <div class="col-sm-12">
                 <h3>What podcast clients can I view MP3 chapter markers in?</h3>
-                <p>Most third-party podcast clients can view MP3 chapter markers. You can get an idea of the podcast clients that support MP3 chapter markers using <a href="https://docs.google.com/spreadsheets/d/1c2L14UVH1xtN4iDG4awheLbMgPCQgaKEamUauWs1gps/edit#gid=0">this spreadsheet</a> (you'll want column W). Please note it's not entirely up-to-date, with MP3 chapter markers quickly gaining adoption across the spectrum of podcast clients.</p>
-                <p>The big podcast client that cannot is Podcasts for iOS (and iTunes for macOS), and this is a known issue. There is a radar filed at <code>#24883412</code>, and we hope Apple will fix Podcasts for iOS and iTunes for macOS to support MP3 chapter markers soon.</p>
-                <p><strong>Update:</strong> iOS 12 <a href="https://twitter.com/tpritc/status/1004336257651134464">now supports MP3 chapter markers</a> on iOS. When it's released (expected in September 2018), the most used podcast client in the world will support MP3 chapter markers!</p>
+                <p>MP3 chapter markers are supported by most podcast clients, including <a href="https://www.apple.com/itunes/podcasts/">Apple Podcasts on iOS</a> (provided <a href="https://twitter.com/tpritc/status/1004336257651134464">you're on iOS 12</a>), <a href="https://overcast.fm">Overcast</a>, <a href="https://www.pocketcasts.com/">Pocket Casts</a>, <a href="http://supertop.co/castro/">Castro</a>, and more.</p>
+                <p>You can get an idea of the podcast clients that support MP3 chapter markers using <a href="https://docs.google.com/spreadsheets/d/1c2L14UVH1xtN4iDG4awheLbMgPCQgaKEamUauWs1gps/edit#gid=0">this spreadsheet</a> (you'll want column W). Please note it's not entirely up-to-date, with MP3 chapter markers quickly gaining adoption across the spectrum of podcast clients.</p>
             </div>
             <div class="col-sm-12">
                 <h3>What ID3 version does Podcast Chapters use?</h3>
@@ -55,12 +54,11 @@
                     <li>Podcast authors</li>
                     <li>Podcast artwork</li>
                     <li>Episode title</li>
-                    <li>Episode summary</li>
                 </ul>
             </div>
             <div class="col-sm-12">
                 <h3>Does Podcast Chapters support individual chapter artwork?</h3>
-                <p>As of Podcast Chapters 1.2, you can now add individual chapter artwork. In compatible podcast clients, this will show up as the show art during the time period of the chapter..</p>
+                <p>As of Podcast Chapters 1.2, you can now add individual chapter artwork. In compatible podcast clients, this will show up as the show art during the time period of the chapter.</p>
             </div>
             <div class="col-sm-12">
                 <h3>Can I import markers from [some format]?</h3>
@@ -69,12 +67,11 @@
                 <img src="../images/faq/import-cue.png" width="100%">
                 <br><br>
                 <p>The <code>cue</code> files only support importing the title and the timestamp of a chapter, and if you want to add a URL or an image to the chapter, you will need to do that manually in Podcast Chapters.</p>
-                <p>Support for <code>csv</code> files is on the way, and if you'd like another format supported, feel free to <a href="https://twitter.com/tpritc">reach out to me</a>.</p>
             </div>
             <div class="col-sm-12">
                 <h3>I have another question that's not answered here.</h3>
                 <p>First of all, that's not a question, it's a statement.</p>
-                <p>The best place to ask a question is on Twitter (<a href="https://twitter.com/tpritc">@tpritc</a>), or if you'd rather, you can <a href="mailto:hi@tpritc.com">send me an email</a>.</p>
+                <p>The best place to ask a question is on Twitter (<a href="https://twitter.com/tpritc">@tpritc</a>), my DMs are open.</p>
             </div>
         </div>
     </div>
