--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -39,6 +39,18 @@
         <hr>
         <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 1.4 <small>Released September 20, 2018</small></h3>
+                <img src="../images/screenshot-layout-4-dark.png" style="width: 100%"/>
+                <p>This is our Mojave release, with support for Apple's latest version of macOS.</p>
+                <ul>
+                    <li><strong>Dark mode:</strong> Now you can finish up your episode late into the night, with support for macOS Mojave's dark theme.</li>
+                    <li><strong>Accent colors:</strong> With macOS Mojave, you can use red, green, even pink as your system accent color, and now, whether you're sticking with good old blue, or making your Mac your own, Podcast Chapters will be right there with you.</li>
+                    <li><strong>Bug fixes:</strong> We fixed a few bugs in this release, including an issue with dragging images into your chapters.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row marketing">
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 1.3.2 <small>Released January 5, 2018</small></h3>
                 <p>In this minor update I've fixed a bug that showed up in the 1.3.1 release.</p>
                 <ul>
