Quick update of copyright and support links.

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
         <br><hr>
 
         <footer class="footer">
-            <p>&copy; 2018 <a href="http://tpritc.com">Thomas Pritchard</a></p>
-            <p><a href="https://twitter.com/tpritc">@tpritc</a></p>
+            <p>&copy; 2019 <a href="http://bjoreman.com">Fredrik Björeman</a></p>
+            <p><a href="https://twitter.com/bjoreman">@bjoreman</a></p>
             <p><a href="http://chaptersapp.com/faq">Frequently Asked Questions</a></p>
             <p><a href="http://chaptersapp.com/release-notes">Release Notes</a></p>
         </footer>
