--- a/support/id3-version/index.html
+++ b/support/id3-version/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../../chapters.css">
-    <title>Chapters &mdash; The best way to add MP3 chapter markers to your podcast.</title>
+    <title>Podcast Chapters &mdash; The best way to add MP3 chapter markers to your podcast.</title>
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -27,8 +27,8 @@
     <div class="container">
         <div class="row marketing">
             <div class="col-xs-12" style="text-align: center;">
-                <h1>Chapters Support</h1>
-                <p><a href="http://chaptersapp.com">← Return to Chapters</a></p>
+                <h1>Podcast Chapters Support</h1>
+                <p><a href="http://chaptersapp.com">← Return to Podcast Chapters</a></p>
             </div>
         </div>
         <div class="row marketing">
@@ -44,7 +44,7 @@
                     <li>Right click (or Control-Click) the file in iTunes again. Click <code>Show in Finder</code>.</li>
                     <li>Copy this back into your working directory. This file should now work perfectly in Chapters.</li>
                 </ol>
-                <p>This is a part of the Chapters experience I'm hoping to improve in future releases, so make sure your version of Chapters is always up to date! Still need help? <a href="mailto:hi@tpritc.com">Email me</a>.</p>
+                <p>This is a part of the Chapters experience I'm hoping to improve in future releases, so make sure your version of Chapters is always up to date! Still need help? <a href="mailto:fredrik@bjoreman.com">Email me</a>.</p>
             </div>
         </div>
     </div>
