--- a/faq/index.html
+++ b/faq/index.html
@@ -11,16 +11,6 @@
     <link rel="stylesheet" href="../chapters.css">
     <title>Podcast Chapters &mdash; Frequently Asked Questions</title>
 
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-46584405-2', 'auto');
-        ga('send', 'pageview');
-    </script>
-
 </head>
 <body>
     <div class="container">
@@ -32,7 +22,7 @@
             </div>
             <div class="col-xs-12">
                 <p>Thanks for your interest in Podcast Chapters. If your question isn't answered in this FAQ, feel free to reach out to me on <a href="https://twitter.com/bjoreman">Twitter</a> and I'll be sure to help you out.</p>
-                <p><a href="http://chaptersapp.com">← Return to Podcast Chapters</a></p>
+                <p><a href="../index.html">← Return to Podcast Chapters</a></p>
             </div>
         </div>
         <hr>
