--- a/index.html
+++ b/index.html
@@ -11,16 +11,6 @@
     <link rel="stylesheet" href="chapters.css">
     <title>Podcast Chapters &mdash; The best way to add MP3 chapter markers to your podcast.</title>
 
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-46584405-2', 'auto');
-        ga('send', 'pageview');
-    </script>
-
 </head>
 <body>
 
@@ -110,8 +100,8 @@
         <footer class="footer">
             <p>&copy; 2019 <a href="http://bjoreman.com">Fredrik Björeman</a></p>
             <p><a href="https://twitter.com/bjoreman">@bjoreman</a></p>
-            <p><a href="http://chaptersapp.com/faq">Frequently Asked Questions</a></p>
-            <p><a href="http://chaptersapp.com/release-notes">Release Notes</a></p>
+            <p><a href="faq/index.html">Frequently Asked Questions</a></p>
+            <p><a href="release-notes/index.html">Release Notes</a></p>
         </footer>
 
     </div> <!-- /container -->
