--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -11,15 +11,6 @@
     <link rel="stylesheet" href="../chapters.css">
     <title>Podcast Chapters &mdash; Release Notes</title>
 
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-46584405-2', 'auto');
-        ga('send', 'pageview');
-    </script>
 
 </head>
 <body>
@@ -33,7 +24,7 @@
             </div>
             <div class="col-xs-12">
                 <p>Thanks for purchasing Podcast Chapters, I really appreciate your support, and I hope you've found it useful so far! I'll be releasing updates here and there to add features and fix bugs. You can find a list of the changes so far on this page.</p>
-                <p><a href="http://chaptersapp.com">← Return to Podcast Chapters</a></p>
+                <p><a href="../index.html">← Return to Podcast Chapters</a></p>
             </div>
         </div>
         <hr>
