--- a/support/id3-version/index.html
+++ b/support/id3-version/index.html
@@ -11,16 +11,6 @@
     <link rel="stylesheet" href="../../chapters.css">
     <title>Podcast Chapters &mdash; The best way to add MP3 chapter markers to your podcast.</title>
 
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-46584405-2', 'auto');
-        ga('send', 'pageview');
-    </script>
-
 </head>
 <body>
 
@@ -28,7 +18,7 @@
         <div class="row marketing">
             <div class="col-xs-12" style="text-align: center;">
                 <h1>Podcast Chapters Support</h1>
-                <p><a href="http://chaptersapp.com">← Return to Podcast Chapters</a></p>
+                <p><a href="../index.html">← Return to Podcast Chapters</a></p>
             </div>
         </div>
         <div class="row marketing">
