Added FAQ about who develops the app now.

--- a/faq/index.html
+++ b/faq/index.html
@@ -59,6 +59,10 @@
                 <p>The <code>cue</code> files only support importing the title and the timestamp of a chapter, and if you want to add a URL or an image to the chapter, you will need to do that manually in Podcast Chapters.</p>
             </div>
             <div class="col-sm-12">
+                <h3>What happened to Thomas Pritchard?</h3>
+                <p>Podcast Chapters was created and developed by Thomas Pritchard from 2016 to March 2019, when he handed charge of the app over to Fredrik Björeman. I (hello!) have lent a hand with the last few releases, and I look forward to keep things going in very much the same style as before. You can read a bit more <a href="https://bjoreman.com/thoughts/adoptingPodcastChapters.html">over here</a>, if you like.</p>
+            </div>
+            <div class="col-sm-12">
                 <h3>I have another question that's not answered here.</h3>
                 <p>First of all, that's not a question, it's a statement.</p>
                 <p>The best place to ask a question is on Twitter (<a href="https://twitter.com/bjoreman">@bjoreman</a>), my DMs are open.</p>
