--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,16 @@
         <hr>
         <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 1.4.1 <small>Released March 18, 2019</small></h3>
+                <p>A very small version to mark the transition of developer for the app.</p>
+                <ul>
+                    <li><strong>Bug fix:</strong> Hopefully fixed a crash which could occur if a podcast was opened including a chapter without a title.</li>
+                    <li>New developer: new copyright information, new certificates to managers. Developers out there know what a delight it can be, everyone else can ignore and be happy. (This time, a reboot was happily all that was required to solve the issue.)</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row marketing">
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 1.4 <small>Released September 22, 2018</small></h3>
                 <img src="../images/screenshot-layout-4-dark.png" style="width: 100%"/>
                 <p>This is our Mojave release, with support for Apple's latest version of macOS.</p>
