Slight correction to release notes.

--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -34,7 +34,7 @@
                 <p>A very small version to mark the transition of developer for the app.</p>
                 <ul>
                     <li><strong>Bug fix:</strong> Hopefully fixed a crash which could occur if a podcast was opened including a chapter without a title.</li>
-                    <li>New developer: new copyright information, new certificates to managers. Developers out there know what a delight it can be, everyone else can ignore and be happy. (This time, a reboot was happily all that was required to solve the issue.)</li>
+                    <li>New developer: new copyright information, new certificates to manage. Developers out there know what a delight it can be, everyone else can ignore and be happy. (This time, a reboot was happily all that was required to solve the issue.)</li>
                 </ul>
             </div>
         </div>
