--- a/faq/index.html
+++ b/faq/index.html
@@ -35,6 +35,7 @@
             <div class="col-sm-12">
                 <h3>What ID3 version does Podcast Chapters use?</h3>
                 <p>Podcast Chapters uses ID3 v2.3 throughout, even if the file that's imported uses a different ID3 tag (or doesn't have one at all).</p>
+                <p>This means that if you import a file with ID3 v2.4 metadata that's not supported in ID3 v.2.3, that information will not remain in the exported file. Full support for ID3 2.4 is on my wishlist, please let me know if this is important to you so I can prioritize better!</p>
             </div>
             <div class="col-sm-12">
                 <h3>Can I add other podcast metadata in Podcast Chapters?</h3>
@@ -45,10 +46,11 @@
                     <li>Podcast artwork</li>
                     <li>Episode title</li>
                 </ul>
+                <p>Podcast Chapters also preserves any other ID3 v.2.3 metadata present in the file, so if you like you can use any other tool to add further metadata.</p>
             </div>
             <div class="col-sm-12">
                 <h3>Does Podcast Chapters support individual chapter artwork?</h3>
-                <p>As of Podcast Chapters 1.2, you can now add individual chapter artwork. In compatible podcast clients, this will show up as the show art during the time period of the chapter.</p>
+                <p>Yes! As of Podcast Chapters 1.2, you can now add individual chapter artwork. In compatible podcast clients, this will show up as the show art during the time period of the chapter.</p>
             </div>
             <div class="col-sm-12">
                 <h3>Can I import markers from [some format]?</h3>
