--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -28,6 +28,21 @@
             </div>
         </div>
         <hr>
+         <div class="row marketing">
+            <div class="col-sm-12">
+                <h3>Podcast Chapters 1.5 <small>Released May 27, 2019</small></h3>
+                <p>1.5 is major on the inside: it's more or less the same nice car with a new engine. Don't worry, it still handles just the same, it just requires less maintenance, uses less fuel and will be easier to upgrade in the future!</p>
+                <p>All that said, of course there are a couple of immediately useful additions too:</p>
+                <ul>
+                    <li><strong>Hidden chapters:</strong> Each chapter now has a checkbox to remove it from the chapter table of contents. This means you can have an image and/or URL show up while the podcast is playing without adding more chapters for the user to choose from. Great for easter eggs! Thanks <a href="https://twitter.com/jacobtender">@jacobtender</a> for the suggestion!</li>
+                    <li><strong>Chapter with current playback time:</strong> Create a new chapter while the episode is playing, and the chapter will be set to start at the current playback time. This works both with button clicks and the CMD+N keyboard shortcut.</li>
+                    <li><strong>Bug fixes:</strong> Fixed lots of problems with opening MP3:s with existing chapters. This means, for example, that if you edit your podcast in an app like <a href="https://hindenburg.com">Hindenburg</a>, you can export your MP3 including chapter information straight from there. The same should go for any other editing app supporting exporting to MP3 with chapters. Thanks <a href="https://twitter.com/tjluoma">@tjluoma</a> for some great bug reporting!</li>
+                </ul>
+                <p>The next big feature will probably be restoring episode descriptions. It has been requested by multiple users and required this engine change to work well. I also realized while working on thus that descriptions (or comments as they're know inside the ID3 tags) have a bunch of interesting cases to handle if I don't want to mangle existing metadata. And I don't, so I will proceed with some care.</p>
+                <p>Thanks again to everyone using the app, everyone who has reported a bug or a wish, and everyone else who makes it fun to develop Podcast Chapters!</p>
+                <p><small>Made on a <a href="https://bjoreman.com/thoughts/macbook.html">MacBook Adorable</a>.</small></p>
+            </div>
+        </div>
         <div class="row marketing">
             <div class="col-sm-12">
                 <h3>Podcast Chapters 1.4.1 <small>Released March 18, 2019</small></h3>
