--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -28,6 +28,14 @@
             </div>
         </div>
         <hr>
+        <div class="row marketing">
+            <div class="col-sm-12">
+                <h3>Podcast Chapters 1.5.1 <small>Released May 30, 2019</small></h3>
+                <ul>
+                    <li><strong>Bug fix:</strong> Fixed a bug where files without any ID3 metadata at all would be incorrectly read and as a result lack some amount of time when exported. Thanks <a href="https://twitter.com/davidarribas">@davidarribas</a> for excellent problem reports!</li>
+                </ul>
+            </div>
+        </div>
          <div class="row marketing">
             <div class="col-sm-12">
                 <h3>Podcast Chapters 1.5 <small>Released May 27, 2019</small></h3>
