Ooops, broke layout a little.

--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -28,7 +28,8 @@
             </div>
         </div>
         <hr>
-        <div class="col-sm-12">
+        <div class="row marketing">
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 1.5.2 <small>Released June 11, 2019</small></h3>
                 <ul>
                     <li>Improved preservation of existing ID3 v2.2 metadata, text frames and comment frames are now properly handled. This work is also progress toward bringing back episode descriptions, as they are comment frames behind the scenes. Thanks Gene Lavergne for reporting the problem!</li>
