--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,14 @@
         <hr>
         <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 1.5.3 <small>Released June 12, 2019</small></h3>
+                <ul>
+                    <li>Fixed a bug with adding or editing chapters where the current playback time would always be used instead of what you were trying to enter. Thanks <a href="https://twitter.com/papadimitriou">@papadimitriou</a>, Franco Solerio, and <a href="https://twitter.com/LeonardChrist">@LeonardChrist</a> for reporting the problem!</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row marketing">
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 1.5.2 <small>Released June 11, 2019</small></h3>
                 <ul>
                     <li>Improved preservation of existing ID3 v2.2 metadata, text frames and comment frames are now properly handled. This work is also progress toward bringing back episode descriptions, as they are comment frames behind the scenes. Thanks Gene Lavergne for reporting the problem!</li>
