--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,15 @@
         <hr>
         <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 1.5.4 <small>Released June 21, 2019</small></h3>
+                <ul>
+                    <li>Fixed a problem with chapter start times being off when playing back the finished file. The playback engine needed an upgrade to provide better timing precision. Thanks <a href="https://twitter.com/jacobtender">@jacobtender</a> for reporting the problem! </li>
+                    <li>Fixed a bug with chapter durations being incorrectly set. Thanks Franco Solerio for reporting the problem!</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row marketing">
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 1.5.3 <small>Released June 12, 2019</small></h3>
                 <ul>
                     <li>Fixed a bug with adding or editing chapters where the current playback time would always be used instead of what you were trying to enter. Thanks <a href="https://twitter.com/papadimitriou">@papadimitriou</a>, Franco Solerio, and <a href="https://twitter.com/LeonardChrist">@LeonardChrist</a> for reporting the problem!</li>
