--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,14 @@
         <hr>
         <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 1.5.6 <small>Released July 13, 2019</small></h3>
+                <ul>
+                    <li>Fixed a problem which could cause chapter information to be lost after export. It was probably rare on the whole, but common for users who were unfortunate enough to be affected by it. It took an extra day and version to fully grasp the problem and put a proper fix in place, so this really is information for both 1.5.5 and 1.5.6. Thanks <a href="https://twitter.com/ucitykid88">@ucitykid88</a> and  <a href="https://twitter.com/papadimitriou">@papadimitriou</a> and Federico Travaini for problem reports!</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row marketing">
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 1.5.4 <small>Released June 21, 2019</small></h3>
                 <ul>
                     <li>Fixed a problem with chapter start times being off when playing back the finished file. The playback engine needed an upgrade to provide better timing precision. Thanks <a href="https://twitter.com/jacobtender">@jacobtender</a> for reporting the problem! </li>
