--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,16 @@
         <hr>
         <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 1.6 <small>Released July 23, 2019</small></h3>
+                <ul>
+                    <li>You can now drag MP3 and CUE files right to the app window, no need to drag to the dock anymore.</li>
+                    <li>If you dragged a CUE file to the app without having a podcast open, the app would crash. This is no longer the case. Thanks Federico Travaini for the problem report!</li>
+                    <li>If your MP3 file already includes data about lyrics, Podcast Chapters is now better at properly preserving this information. The lyrics frame is sometimes used to display a description of the podcast, so support for showing and editing this information is planned for future versions.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row marketing">
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 1.5.6 <small>Released July 13, 2019</small></h3>
                 <ul>
                     <li>Fixed a problem which could cause chapter information to be lost after export. It was probably rare on the whole, but common for users who were unfortunate enough to be affected by it. It took an extra day and version to fully grasp the problem and put a proper fix in place, so this really is information for both 1.5.5 and 1.5.6. Thanks <a href="https://twitter.com/ucitykid88">@ucitykid88</a> and  <a href="https://twitter.com/papadimitriou">@papadimitriou</a> and Federico Travaini for problem reports!</li>
