--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,16 @@
         <hr>
         <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 1.6.1 <small>Released August 2, 2019</small></h3>
+                <ul>
+                    <li>When using keyboard shortcuts (shift-command-left and right arrow) to skip between chapters, the selected chapter information is also updated. Thanks Federico Travaini  for the suggestion!</li>
+                    <li>Chapter start points are marked on the timeline at the bottom of the window.</li>
+                    <li>Hidden chapters have a dashed border in the main list.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row marketing">
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 1.6 <small>Released July 23, 2019</small></h3>
                 <ul>
                     <li>You can now drag MP3 and CUE files right to the app window, no need to drag to the dock anymore.</li>
