--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
         </div>
         <div class="row marketing">
             <div class="col-sm-6">
+                <h4>No encoding or re-encoding</h4>
+                <p>Podcast Chapters doesn't touch the actual bytes of your MP3, it just edits the information around them. That means no loss of quality, and no waiting for encoding to finish.</p>
+            </div>
+            <div class="visible-xs"><br></div>
+            <div class="col-sm-6">
+                               <h4>Native to the Mac</h4>
+                <p>No uploading, using a clunky web interface, and re-downloading. Podcast Chapters is designed for the Mac you use and love, by someone who uses and loves it too.</p></div>
+        </div>
+        <div class="row marketing">
+            <div class="col-sm-6">
                 <h4>Listen Back</h4>
                 <p>If you're not sure where to drop your chapter markers, listen back in Podcast Chapters. Adding a new chapter marker will drop it automatically at your current position.</p>
             </div>
@@ -56,8 +66,6 @@
             </div>
             <div class="visible-xs"><br></div>
             <div class="col-sm-6">
-                <h4>Native to the Mac</h4>
-                <p>No uploading, using a clunky web interface, and re-downloading. Podcast Chapters is designed for the Mac you use and love, by someone who uses and loves it too.</p>
             </div>
         </div>
 
