--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,15 @@
         <hr>
         <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 1.6.2 <small>Released December 2X, 2019</small></h3>
+                <ul>
+                    <li>Editing of presets has been added. Simply open the presets menu, click "Manage Presets", select the one you want to change and click "Edit Preset"</li>
+                    <li>Fixed a problem reading file metadata edited by some other applications. (Techy details: Podcast Chapters failed to read metadata written using certain encodings which didn't exist before version 2.4 of the ID3 specification.) Thanks to Olaf Dieckmann for reporting the problem!</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row marketing">
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 1.6.1 <small>Released August 2, 2019</small></h3>
                 <ul>
                     <li>When using keyboard shortcuts (shift-command-left and right arrow) to skip between chapters, the selected chapter information is also updated. Thanks Federico Travaini  for the suggestion!</li>
