--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,14 @@
         <hr>
         <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 1.6.3 <small>Released January 24, 2020</small></h3>
+                <ul>
+                    <li>Fixed a problem with chapter start times being off when playing back the finished file. Yes, the problem from this summer came back in a new form. Thanks <a href="https://twitter.com/jacobtender">@jacobtender</a> for reporting the problem, both times!</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row marketing">
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 1.6.2 <small>Released December 28, 2019</small></h3>
                 <ul>
                     <li>Editing of presets has been added. Simply open the presets menu, click "Manage Presets", select the one you want to change and click "Edit Preset"</li>
