--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,14 @@
         <hr>
         <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 1.6.4 <small>Released February 9, 2020</small></h3>
+                <ul>
+                    <li>Fixed a couple of elusive problems with text handling, which could leave some podcast players unable to display chapter images and sometimes even the whole chapter information. Thanks to <a href="https://www.artgrindpodcast.com">Tun Myaing</a> and <a href="https://hggqvst.com">Victor Häggqvist</a> for reporting the problems!</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row marketing">
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 1.6.3 <small>Released January 24, 2020</small></h3>
                 <ul>
                     <li>Fixed a problem with chapter start times being off when playing back the finished file. Yes, the problem from this summer came back in a new form. Thanks <a href="https://twitter.com/jacobtender">@jacobtender</a> for reporting the problem, both times!</li>
