--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
         </div>
         <div class="row marketing">
             <div class="col-sm-6">
+                <h4>View Metadata</h4>
+                <p>View Metadata: Regardless of which app added it, Podcast Chapter's new Metadata window will display any and all information added to your MP3.</p>
+            </div>
+            <div class="col-sm-6">
                 <h4>Power-User Features</h4>
                 <p>Do you edit multiple podcasts? Save time with the presets system in Podcast Chapters. Save your shows with pre-set metadata, including the show art. Never spend hours searching for that one image file again.</p>
-            </div>
-            <div class="visible-xs"><br></div>
-            <div class="col-sm-6">
             </div>
         </div>
 
@@ -106,7 +107,7 @@
         <br><hr>
 
         <footer class="footer">
-            <p>&copy; 2019 <a href="http://bjoreman.com">Fredrik Björeman</a></p>
+            <p>&copy; 2020 <a href="http://bjoreman.com">Fredrik Björeman</a></p>
             <p><a href="https://twitter.com/bjoreman">@bjoreman</a></p>
             <p><a href="faq/index.html">Frequently Asked Questions</a></p>
             <p><a href="release-notes/index.html">Release Notes</a></p>
