--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -28,6 +28,16 @@
             </div>
         </div>
         <hr>
+         <div class="row marketing">
+            <div class="col-sm-12">
+                <h3>Podcast Chapters 2.0.0 <small>Released March 1, 2020</small></h3>
+                <ul>
+                    <li>Espisode descriptions are back, enabling you to enter as long or as short a description as you like. (Emoji work too 🎉)</li>
+                    <li>The Metadata window has secretly been around for a while, but now it's actually useful enough to mention: It shows you all the MP3 metadata on your file, regardless of which app added it. Identifier, description and - for most types of content - the actual content is displayed. No editing is possible though, at least not yet</li>
+                    <li>Oh, and lots of fun improvements under the hood. Well, fun for me, the developer, anyway. Trust me, the seams and back of the cupboard are put together more nicely than ever before</li>
+                </ul>
+            </div>
+        </div>
         <div class="row marketing">
             <div class="col-sm-12">
                 <h3>Podcast Chapters 1.6.4 <small>Released February 9, 2020</small></h3>
