--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <br><hr>
 
         <footer class="footer">
-            <p>&copy; 2020 <a href="http://bjoreman.com">Fredrik Björeman</a></p>
+            <p>&copy; 2020 <a href="https://bjoreman.com">Fredrik Björeman</a></p>
             <p><a href="https://twitter.com/bjoreman">@bjoreman</a></p>
             <p><a href="faq/index.html">Frequently Asked Questions</a></p>
             <p><a href="release-notes/index.html">Release Notes</a></p>
